bib cleanup, outline

--- a/references.bib
+++ b/references.bib
@@ -10,20 +10,16 @@
 	date = {2013}
 }
 
-@thesis{cromwell_social_2013,
+@thesis{cromwell,
 	location = {United States -- Washington},
 	title = {The Social Act of Bicycling Designing Bicycle Facilities to Foster Social Interaction},
 	rights = {Copyright {ProQuest}, {UMI} Dissertations Publishing 2013},
 	url = {http://search.proquest.com.proxy.mah.se/docview/1426400351/abstract/9C5A58291A8E49FBPQ/1?accountid=12249},
-	abstract = {While sociologists and designers in the last half century have acknowledged that the pedestrian experience is a critical part of the urban landscape, it is time to recognize that the bicyclist, like the pedestrian, is an active agent in shaping the character of the city. Current best practices suggest that public facilities design has an important impact on urban quality of life. This is as true for bicycle facilities as it is for pedestrian facilities. While the importance of social interaction has been acknowledged for pedestrians and used to improve pedestrian facilities, it has gone relatively unacknowledged for bicyclists, nor used to improve bicycle facility designs. An analysis of the mechanics of public, non-verbal social interaction is conducted leading to the conclusion that bicyclists too have social interactions. A series of design interventions are then proposed to illustrate how thoughtfully designed bicycle faculties can foster indirect social interaction in the build environment.},
-	pagetotal = {70},
 	institution = {University of Washington},
 	type = {Master's},
 	author = {Cromwell, Peter},
 	urldate = {2015-03-11},
 	date = {2013},
-	keywords = {bicycling, Bicycling facilites, Communication and the arts, design, Landscape, social interaction, Social sciences},
-	file = {Snapshot:/home/tim/.zotero/zotero/0vj92h4e.default/zotero/storage/SK6AAF2J/1.html:text/html}
 }
 
 @article{kostakos_brief_2010,
@@ -33,32 +29,14 @@
 	url = {http://doi.acm.org/10.1145/1721831.1721833},
 	doi = {10.1145/1721831.1721833},
 	shorttitle = {Brief Encounters},
-	abstract = {Moving human-computer interaction off the desktop and into our cities requires new approaches to understanding people and technologies in the built environment. We approach the city as a system, with human, physical and digital components and behaviours. In creating effective and usable urban pervasive computing systems, we need to take into account the patterns of movement and encounter amongst people, locations, and mobile and fixed devices in the city. Advances in mobile and wireless communications have enabled us to detect and record the presence and movement of devices through cities. This article makes a number of methodological and empirical contributions. We present a toolkit of algorithms and visualization techniques that we have developed to model and make sense of spatial and temporal patterns of mobility, presence, and encounter. Applying this toolkit, we provide an analysis of urban Bluetooth data based on a longitudinal dataset containing millions of records associated with more than 70000 unique devices in the city of Bath, {UK}. Through a novel application of established complex network analysis techniques, we demonstrate a significant finding on the relationship between temporal factors and network structure. Finally, we suggest how our understanding and exploitation of these data may begin to inform the design and use of urban pervasive systems.},
 	pages = {2:1--2:38},
 	number = {1},
 	journaltitle = {{ACM} Trans. Comput.-Hum. Interact.},
 	author = {Kostakos, Vassilis and O'Neill, Eamonn and Penn, Alan and Roussos, George and Papadongonas, Dikaios},
 	urldate = {2015-03-11},
 	date = {2010-04},
-	keywords = {Bluetooth, brief encounter, complex network, copresence, encounter, epidemic, information diffusion, mobile interaction, mobility, Pervasive, sensing, social network, trail, ubiquitous, urban computing, virus, visualisation},
-	file = {ACM Full Text PDF:/home/tim/.zotero/zotero/0vj92h4e.default/zotero/storage/33H5UHJ3/Kostakos et al. - 2010 - Brief Encounters Sensing, Modeling and Visualizin.pdf:application/pdf}
 }
 
-@thesis{cromwell_social_2013-1,
-	location = {United States -- Washington},
-	title = {The Social Act of Bicycling Designing Bicycle Facilities to Foster Social Interaction},
-	rights = {Copyright {ProQuest}, {UMI} Dissertations Publishing 2013},
-	url = {http://search.proquest.com.proxy.mah.se/docview/1426400351/abstract/9C5A58291A8E49FBPQ/1?accountid=12249},
-	abstract = {While sociologists and designers in the last half century have acknowledged that the pedestrian experience is a critical part of the urban landscape, it is time to recognize that the bicyclist, like the pedestrian, is an active agent in shaping the character of the city. Current best practices suggest that public facilities design has an important impact on urban quality of life. This is as true for bicycle facilities as it is for pedestrian facilities. While the importance of social interaction has been acknowledged for pedestrians and used to improve pedestrian facilities, it has gone relatively unacknowledged for bicyclists, nor used to improve bicycle facility designs. An analysis of the mechanics of public, non-verbal social interaction is conducted leading to the conclusion that bicyclists too have social interactions. A series of design interventions are then proposed to illustrate how thoughtfully designed bicycle faculties can foster indirect social interaction in the build environment.},
-	pagetotal = {70},
-	institution = {University of Washington},
-	type = {Master's},
-	author = {Cromwell, Peter},
-	urldate = {2015-03-11},
-	date = {2013},
-	keywords = {bicycling, Bicycling facilites, Communication and the arts, design, Landscape, social interaction, Social sciences},
-	file = {Snapshot:/home/tim/.zotero/zotero/0vj92h4e.default/zotero/storage/7WMA8V5M/1.html:text/html}
-}
 
 @inproceedings{counts_where_2007,
 	location = {New York, {NY}, {USA}},
@@ -68,7 +46,6 @@
 	doi = {10.1145/1341012.1341026},
 	series = {{GIS} '07},
 	shorttitle = {Where Were We},
-	abstract = {We consider trails to be a document type of growing importance, authored in abundance as locative technologies become embedded in mobile devices carried by billions of humans. As these trail documents become annotated by communities of users, the resulting data sets can provide support for a host of services. In this paper we describe our sociotechnical exploration of the devices, scenarios, and end-user interactions that will come into play as these tools become widespread. We couch this work in a discussion of the sociological impact of a shift from hyperlinks to "hyperties" -- links that bridge the gap between computational media and physical world interactions. We describe a prototype hardware device for location and other sensor data capture. This device links to a complementary website for querying, sharing, and distributing the resulting route datasets. The web application allows users to find related community members via shared attributes of their contributed or annotated routes. These attributes may be generated in part by route analysis performed by systems for activity identification and classification.},
 	pages = {10:1--10:8},
 	booktitle = {Proceedings of the 15th Annual {ACM} International Symposium on Advances in Geographic Information Systems},
 	publisher = {{ACM}},
@@ -76,26 +53,21 @@
 	urldate = {2015-03-11},
 	date = {2007},
 	keywords = {community, mapping, routes, social computing, sports},
-	file = {ACM Full Text PDF:/home/tim/.zotero/zotero/0vj92h4e.default/zotero/storage/9ED8MH9X/Counts and Smith - 2007 - Where Were We Communities for Sharing Space-time .pdf:application/pdf}
 }
 
-@article{spinney_cycling_2009,
+@article{spinney,
 	title = {Cycling the City: Movement, Meaning and Method},
 	volume = {3},
-	rights = {© 2009 The Author. Journal Compilation © 2009 Blackwell Publishing Ltd},
 	issn = {1749-8198},
 	url = {http://onlinelibrary.wiley.com/doi/10.1111/j.1749-8198.2008.00211.x/abstract},
 	doi = {10.1111/j.1749-8198.2008.00211.x},
 	shorttitle = {Cycling the City},
-	abstract = {Conceptualisations of movement and mobility within geography are increasingly complicating reductive and sedentarist understandings that have tended to theorise mobility either as meaningless, or as the practical outcome of ‘rational’ decision makers. Until quite recently there has been a sedentarist bias in cultural geographic enquiry that has resulted in negative readings of mobility as insensate, polluting and harmful. Conversely, while transport geography has long explored people's daily mobility, it has used a primarily quantitative toolkit to explore the ‘rational’ reasons why movement occurs. The corollary of this has been an assumption that meaning is derived from points A and B, and an emphasis on explaining travel choice by eliciting linguistic accounts of movement. More recent research has begun to problematise such understandings and in doing so illuminate potential avenues of enquiry. Consequently, this review makes an argument for research into cycling to explore the content of the line between A and B in order to highlight the often fleeting and ephemeral meanings that can contribute significantly to what movement means. An essential part of this project is for research to focus on the ‘immaterial’ embodied and sensory aspects of mobility that have previously been neglected or marginalised. In order to realise these goals, this article also makes a case for broadening out the palette of methods used to study mobility and discusses the use of video as one possible way to provide more nuanced accounts of people's journeys.},
 	pages = {817--835},
 	number = {2},
 	journaltitle = {Geography Compass},
 	author = {Spinney, Justin},
 	urldate = {2015-03-11},
 	date = {2009-03-01},
-	langid = {english},
-	file = {Snapshot:/home/tim/.zotero/zotero/0vj92h4e.default/zotero/storage/DAJFNGTM/abstract.html:text/html}
 }
 
 @inproceedings{hughes_faltering_1992,
@@ -111,11 +83,9 @@
 	author = {Hughes, John A. and Randall, David and Shapiro, Dan},
 	urldate = {2015-03-11},
 	date = {1992},
-	keywords = {air traffic control, {CSCW} design, database visualisation, ethnography, qualitative methods},
-	file = {ACM Full Text PDF:/home/tim/.zotero/zotero/0vj92h4e.default/zotero/storage/CDGXXB82/Hughes et al. - 1992 - Faltering from Ethnography to Design.pdf:application/pdf}
 }
 
-@inproceedings{esbjornsson_motorcycling_2003,
+@inproceedings{esbjornsson,
 	location = {New York, {NY}, {USA}},
 	title = {Motorcycling and Social Interaction: Design for the Enjoyment of Brief Traffic Encounters},
 	isbn = {1-58113-693-5},
@@ -123,7 +93,6 @@
 	doi = {10.1145/958160.958174},
 	series = {{GROUP} '03},
 	shorttitle = {Motorcycling and Social Interaction},
-	abstract = {We report an ethnographic fieldwork that reveals the importance of social interaction, and especially traffic encounters, for the enjoyment of motorcycling. Motorcyclists spend an appreciable amount of time on the roads to meet other bikers. During the brief traffic encounters, they interact visually by means of their driving, their choice of bike and personal equipment. We uncover problematic issues in this practice and how these are currently addressed. The activities on the roads are partly arranged, and partly complemented by the use of a public message-board on the web. The findings are summarized as a set of implications informing the development of the Hocman prototype. Hocman is a mobile {HTTP} peer-to-peer application, which supports social interaction between motorcyclists.},
 	pages = {85--94},
 	booktitle = {Proceedings of the 2003 International {ACM} {SIGGROUP} Conference on Supporting Group Work},
 	publisher = {{ACM}},
@@ -131,8 +100,18 @@
 	urldate = {2015-03-11},
 	date = {2003},
 	keywords = {bikers, ethnography, social interaction, traffic encounters},
-	file = {ACM Full Text PDF:/home/tim/.zotero/zotero/0vj92h4e.default/zotero/storage/FGQI2V6K/Esbjörnsson et al. - 2003 - Motorcycling and Social Interaction Design for th.pdf:application/pdf}
 }
+
+@incollection{jungnickel,
+  title = {Jumps, Stutters, Blurs and Other Failed Images: Using Time-Lapse Video in Cycling Research}, 
+	author = {Jungnickel, Katrina},
+  editor = {Bates, Charlotte},
+  booktitle = {Video Methods: Social Science Research in Motion},
+  year = {2014},
+	location = {New York, {NY}, {USA}},
+  publisher = {Routledge}
+}
+
 
 @article{jungnickel_cyclings_2014,
 	title = {Cycling’s Sensory Strategies: How Cyclists Mediate their Exposure to the Urban Environment},
@@ -141,14 +120,12 @@
 	url = {http://dx.doi.org/10.1080/17450101.2013.796772},
 	doi = {10.1080/17450101.2013.796772},
 	shorttitle = {Cycling’s Sensory Strategies},
-	abstract = {In this article, we focus on the many ways cyclists mediate their sensory exposure to the urban environment. Drawing on research in Hull, Hackney and Bristol during 2010 and 2011 for the Cycling Cultures research project, we describe a range of ‘sensory strategies’ enrolled by cyclists. Our research reveals how sensory strategies, such as using mobile audio devices, involve deliberate and finely tuned practices shaped by factors such as relaxation, motivation and location. This presents a contrast to media representations of the ‘{iPod} zombie cyclist’ who, plugged into a mobile audio device, lumbers insensitively and dangerously through the urban landscape. The article complicates the idea that sensory practices of listening and not-listening are two fixed and distinct ways of being in the urban environment. We suggest that considering the sensory strategies of cyclists opens up a new terrain for thinking about less easily represented, uncertain and fleeting intersections of mobility, place and the senses. Ultimately, we argue that an analysis of cycling’s sensory strategies might enrich our understanding of mobility cultures by operating to reconnect a range of mobile citizens with the broader messy and less easily controllable sensory landscape. This has implications both for understanding cycling as a sensory practice and for thinking about how the sensory dimensions of other mobile practices are shaped by practitioners.},
 	pages = {238--255},
 	number = {2},
 	journaltitle = {Mobilities},
 	author = {Jungnickel, Katrina and Aldred, Rachel},
 	urldate = {2015-03-07},
 	date = {2014-04-03},
-	file = {Full Text PDF:/home/tim/.zotero/zotero/0vj92h4e.default/zotero/storage/6R9NCSXX/Jungnickel and Aldred - 2014 - Cycling’s Sensory Strategies How Cyclists Mediate.pdf:application/pdf;Snapshot:/home/tim/.zotero/zotero/0vj92h4e.default/zotero/storage/3JUSR4RF/17450101.2013.html:text/html}
 }
 
 @online{_view_????,
@@ -167,14 +144,12 @@
 	url = {http://dx.doi.org/10.1080/14649360903414593},
 	doi = {10.1080/14649360903414593},
 	shorttitle = {‘On the outside’},
-	abstract = {This paper uses in-depth interview data from Cambridge, England, to discuss the concept of the ‘cycling citizen’, exploring how, within heavily-motorised countries, the practice of cycling might affect perceptions of the self in relation to natural and social environments. Participants portrayed cycling as a practice traversing independence and interdependence, its mix of benefits for the individual and the collective making it an appropriate response to contemporary social problems. In this paper I describe how this can be interpreted as based on a specific notion of cycling citizenship rooted in the embodied practice of cycling in Cambridge (a relatively high cycling enclave within the low-cycling {UK}). This notion of cycling citizenship does not dictate political persuasion, but carries a distinctive perspective on the proper relation of the individual to their environment, privileging views ‘from outside’ the motor-car.},
 	pages = {35--52},
 	number = {1},
 	journaltitle = {Social \& Cultural Geography},
 	author = {Aldred, Rachel},
 	urldate = {2015-03-07},
 	date = {2010-02-01},
-	file = {Full Text PDF:/home/tim/.zotero/zotero/0vj92h4e.default/zotero/storage/UADS34RB/Aldred - 2010 - ‘On the outside’ constructing cycling citizenship.pdf:application/pdf;Snapshot:/home/tim/.zotero/zotero/0vj92h4e.default/zotero/storage/5AFQJC5U/14649360903414593.html:text/html}
 }
 
 @article{aldred_constructing_2012,
@@ -216,13 +191,12 @@
 	file = {ACM Full Text PDF:/home/tim/.zotero/zotero/0vj92h4e.default/zotero/storage/GE9FBRBQ/Reddy et al. - 2010 - Biketastic Sensing and Mapping for Better Biking.pdf:application/pdf}
 }
 
-@article{mcilvenny_velomobile_2014,
+@article{mcilvenny,
 	title = {Vélomobile Formations-in-Action Biking and Talking Together},
 	volume = {17},
 	issn = {1206-3312, 1552-8308},
 	url = {http://sac.sagepub.com.proxy.mah.se/content/17/2/137},
 	doi = {10.1177/1206331213508494},
-	abstract = {Cycling is not just a skilled accomplishment by individual cyclists, it can also be social. Cycling to work with other commuters or learning to ride a bike with a caregiver, for example, both involve a keen attention to negotiating and maintaining being together in and through cycling and being seen to be together in a “mobile with”. This article reports on an investigation of some of the different vélomobile formations-in-action that involve specific arrangements of bodies on bikes and configurations of a “vélomobile with”. Video recordings of commuter and family bike rides using consumer and micro video cameras from multiangles were made to capture aural and visual features of the local organization of the ride from the participants’ perspective(s). Several phenomena are presented and discussed, including starting, stopping, and maintaining a vélomobile formation; singling up and tucking in; and stretchy mobile formations. The analysis starts by analyzing side-by-side arrangements, which are then temporarily disrupted, and finishes with formations that are more extensively stretched, but which still afford opportunities for social interaction.},
 	pages = {137--156},
 	number = {2},
 	journaltitle = {Space and Culture},
@@ -235,39 +209,6 @@
 	file = {Full Text PDF:/home/tim/.zotero/zotero/0vj92h4e.default/zotero/storage/Z74V6D73/McIlvenny - 2014 - Vélomobile Formations-in-Action Biking and Talking.pdf:application/pdf;Snapshot:/home/tim/.zotero/zotero/0vj92h4e.default/zotero/storage/AM4IX9KV/137.html:text/html}
 }
 
-@article{mcilvenny_velomobile_2014-1,
-	title = {Velomobile Formations-in-Action: Biking and Talking Together},
-	volume = {17},
-	issn = {1206-3312},
-	url = {http://search.proquest.com.proxy.mah.se/docview/1521991750?pq-origsite=summon},
-	doi = {http://dx.doi.org.proxy.mah.se/10.1177/1206331213508494},
-	shorttitle = {Velomobile Formations-in-Action},
-	abstract = {Cycling is not just a skilled accomplishment by individual cyclists, it can also be social. Cycling to work with other commuters or learning to ride a bike with a caregiver, for example, both involve a keen attention to negotiating and maintaining being together in and through cycling and being seen to be together in a "mobile with". This article reports on an investigation of some of the different velomobile formations-in-action that involve specific arrangements of bodies on bikes and configurations of a "velomobile with". Video recordings of commuter and family bike rides using consumer and micro video cameras from multiangles were made to capture aural and visual features of the local organization of the ride from the participants' perspective(s). Several phenomena are presented and discussed, including starting, stopping, and maintaining a velomobile formation; singling up and tucking in; and stretchy mobile formations. The analysis starts by analyzing side-by-side arrangements, which are then temporarily disrupted, and finishes with formations that are more extensively stretched, but which still afford opportunities for social interaction.},
-	pages = {137--156},
-	number = {2},
-	journaltitle = {Space and Culture},
-	author = {{McIlvenny}, Paul},
-	urldate = {2015-03-04},
-	date = {2014},
-	keywords = {bicycling, mobile formation, mobility, social interaction, talk, video},
-	file = {Snapshot:/home/tim/.zotero/zotero/0vj92h4e.default/zotero/storage/3MGR5BFU/1521991750.html:text/html}
-}
-
-@article{yiannakoulias_mapping_2012,
-	title = {Mapping commuter cycling risk in urban areas},
-	volume = {45},
-	issn = {0001-4575},
-	url = {http://www.sciencedirect.com/science/article/pii/S0001457511003307},
-	doi = {10.1016/j.aap.2011.12.002},
-	abstract = {Cycling is becoming an increasingly important transportation option for commuters. Cycling offers exercise opportunities and reduces the burden of motor vehicle travel on society. Mapping the risk of collision between cyclists and motor vehicles in urban areas is important to understanding safe cyclist route opportunities, making informed transportation planning decisions, and exploring patterns of injury epidemiology. To date, many geographic analyses and representations of cyclist risk have not taken the concept of exposure into account. Instead, risk is either expressed as a rate per capita, or as a count of events. Using data associated with the City of Hamilton, Canada, we illustrate a method for mapping commuter cyclist collision risk per distance travelled. This measure can be used to more realistically represent the underlying geography of cycling risk, and provide more geographically and empirically meaningful information to those interested in understanding how cycling safety varies over space.},
-	pages = {164--172},
-	journaltitle = {Accident Analysis \& Prevention},
-	shortjournal = {Accident Analysis \& Prevention},
-	author = {Yiannakoulias, Nikolaos and Bennet, Scott A. and Scott, Darren M.},
-	urldate = {2015-03-04},
-	date = {2012-03},
-	keywords = {Commuter cycling, Cycling risk, Geographic information systems, Injury mapping, Transportation modelling}
-}
 
 @inproceedings{matassa_wearable_2013,
 	location = {New York, {NY}, {USA}},
@@ -277,7 +218,6 @@
 	doi = {10.1145/2494091.2495973},
 	series = {{UbiComp} '13 Adjunct},
 	shorttitle = {Wearable Accessories for Cycling},
-	abstract = {The paper presents a wearable system, distributed in the garments and on the bicycle, that enables the user to manage "memories" in order to change the human-environment affective interaction. The goal is to exploit wearable technologies in order to create a new form of interaction with urban spaces.},
 	pages = {415--424},
 	booktitle = {Proceedings of the 2013 {ACM} Conference on Pervasive and Ubiquitous Computing Adjunct Publication},
 	publisher = {{ACM}},
@@ -285,7 +225,6 @@
 	urldate = {2015-03-04},
 	date = {2013},
 	keywords = {e-textiles, quantified self, urban spaces, wearable computing},
-	file = {ACM Full Text PDF:/home/tim/.zotero/zotero/0vj92h4e.default/zotero/storage/QMCW6RTU/Matassa et al. - 2013 - Wearable Accessories for Cycling Tracking Memorie.pdf:application/pdf}
 }
 
 @article{bonham_universities_2010,
@@ -301,7 +240,6 @@
 	urldate = {2015-03-04},
 	date = {2010-03},
 	langid = {english},
-	file = {1-s2.0-S136192090900114X-main.pdf:/home/tim/.zotero/zotero/0vj92h4e.default/zotero/storage/D3FPZ23F/1-s2.0-S136192090900114X-main.pdf:application/pdf}
 }
 
 @article{beecham_characterising_2014,
