Finished section on experiment

--- a/references.bib
+++ b/references.bib
@@ -3,7 +3,6 @@
 	location = {Hoboken},
 	edition = {1},
 	title = {Social Machines : How to Develop Connected Products That Change Customers' Lives},
-	isbn = {9781118637296},
 	shorttitle = {Social Machines},
 	publisher = {Wiley},
 	author = {Semmelhack, Peter},
@@ -14,11 +13,9 @@
 	location = {United States -- Washington},
 	title = {The Social Act of Bicycling Designing Bicycle Facilities to Foster Social Interaction},
 	rights = {Copyright {ProQuest}, {UMI} Dissertations Publishing 2013},
-	url = {http://search.proquest.com.proxy.mah.se/docview/1426400351/abstract/9C5A58291A8E49FBPQ/1?accountid=12249},
 	institution = {University of Washington},
 	type = {Master's},
 	author = {Cromwell, Peter},
-	urldate = {2015-03-11},
 	date = {2013},
 }
 
@@ -26,14 +23,11 @@
 	title = {Brief Encounters: Sensing, Modeling and Visualizing Urban Mobility and Copresence Networks},
 	volume = {17},
 	issn = {1073-0516},
-	url = {http://doi.acm.org/10.1145/1721831.1721833},
-	doi = {10.1145/1721831.1721833},
 	shorttitle = {Brief Encounters},
 	pages = {2:1--2:38},
 	number = {1},
 	journaltitle = {{ACM} Trans. Comput.-Hum. Interact.},
 	author = {Kostakos, Vassilis and O'Neill, Eamonn and Penn, Alan and Roussos, George and Papadongonas, Dikaios},
-	urldate = {2015-03-11},
 	date = {2010-04},
 }
 
@@ -42,7 +36,6 @@
 	location = {New York, {NY}, {USA}},
 	title = {Where Were We: Communities for Sharing Space-time Trails},
 	isbn = {978-1-59593-914-2},
-	url = {http://doi.acm.org/10.1145/1341012.1341026},
 	doi = {10.1145/1341012.1341026},
 	series = {{GIS} '07},
 	shorttitle = {Where Were We},
@@ -50,7 +43,6 @@
 	booktitle = {Proceedings of the 15th Annual {ACM} International Symposium on Advances in Geographic Information Systems},
 	publisher = {{ACM}},
 	author = {Counts, Scott and Smith, Marc},
-	urldate = {2015-03-11},
 	date = {2007},
 	keywords = {community, mapping, routes, social computing, sports},
 }
@@ -59,14 +51,11 @@
 	title = {Cycling the City: Movement, Meaning and Method},
 	volume = {3},
 	issn = {1749-8198},
-	url = {http://onlinelibrary.wiley.com/doi/10.1111/j.1749-8198.2008.00211.x/abstract},
-	doi = {10.1111/j.1749-8198.2008.00211.x},
 	shorttitle = {Cycling the City},
 	pages = {817--835},
 	number = {2},
 	journaltitle = {Geography Compass},
 	author = {Spinney, Justin},
-	urldate = {2015-03-11},
 	date = {2009-03-01},
 }
 
@@ -74,14 +63,11 @@
 	location = {New York, {NY}, {USA}},
 	title = {Faltering from Ethnography to Design},
 	isbn = {0-89791-542-9},
-	url = {http://doi.acm.org/10.1145/143457.143469},
-	doi = {10.1145/143457.143469},
 	series = {{CSCW} '92},
 	pages = {115--122},
 	booktitle = {Proceedings of the 1992 {ACM} Conference on Computer-supported Cooperative Work},
 	publisher = {{ACM}},
 	author = {Hughes, John A. and Randall, David and Shapiro, Dan},
-	urldate = {2015-03-11},
 	date = {1992},
 }
 
@@ -89,15 +75,12 @@
 	location = {New York, {NY}, {USA}},
 	title = {Motorcycling and Social Interaction: Design for the Enjoyment of Brief Traffic Encounters},
 	isbn = {1-58113-693-5},
-	url = {http://doi.acm.org/10.1145/958160.958174},
-	doi = {10.1145/958160.958174},
 	series = {{GROUP} '03},
 	shorttitle = {Motorcycling and Social Interaction},
 	pages = {85--94},
 	booktitle = {Proceedings of the 2003 International {ACM} {SIGGROUP} Conference on Supporting Group Work},
 	publisher = {{ACM}},
 	author = {Esbjörnsson, Mattias and Juhlin, Oskar and Östergen, Mattias},
-	urldate = {2015-03-11},
 	date = {2003},
 	keywords = {bikers, ethnography, social interaction, traffic encounters},
 }
@@ -117,38 +100,29 @@
 	title = {Cycling’s Sensory Strategies: How Cyclists Mediate their Exposure to the Urban Environment},
 	volume = {9},
 	issn = {1745-0101},
-	url = {http://dx.doi.org/10.1080/17450101.2013.796772},
-	doi = {10.1080/17450101.2013.796772},
 	shorttitle = {Cycling’s Sensory Strategies},
 	pages = {238--255},
 	number = {2},
 	journaltitle = {Mobilities},
 	author = {Jungnickel, Katrina and Aldred, Rachel},
-	urldate = {2015-03-07},
 	date = {2014-04-03},
 }
 
 @online{_view_????,
 	title = {View from the saddle and the lens: Experiencing, examining and representing cycling cultures.},
-	url = {https://www.academia.edu/2527057/View_from_the_saddle_and_the_lens_Experiencing_examining_and_representing_cycling_cultures},
 	shorttitle = {View from the saddle and the lens},
 	abstract = {View from the saddle and the lens: Experiencing, examining and representing cycling cultures.},
-	urldate = {2015-03-07},
-	file = {Snapshot:/home/tim/.zotero/zotero/0vj92h4e.default/zotero/storage/JVHD5Q6W/View_from_the_saddle_and_the_lens_Experiencing_examining_and_representing_cycling_cultures.html:text/html}
 }
 
 @article{aldred_outside:_2010,
 	title = {‘On the outside’: constructing cycling citizenship},
 	volume = {11},
 	issn = {1464-9365},
-	url = {http://dx.doi.org/10.1080/14649360903414593},
-	doi = {10.1080/14649360903414593},
 	shorttitle = {‘On the outside’},
 	pages = {35--52},
 	number = {1},
 	journaltitle = {Social \& Cultural Geography},
 	author = {Aldred, Rachel},
-	urldate = {2015-03-07},
 	date = {2010-02-01},
 }
 
@@ -156,36 +130,28 @@
 	title = {Constructing Mobile Places between ‘Leisure’ and ‘Transport’: A Case Study of Two Group Cycle Rides},
 	volume = {46},
 	issn = {0038-0385, 1469-8684},
-	url = {http://soc.sagepub.com.proxy.mah.se/content/46/3/523},
 	doi = {10.1177/0038038511428752},
 	shorttitle = {Constructing Mobile Places between ‘Leisure’ and ‘Transport’},
-	abstract = {This article contributes to a growing literature examining the sociological significance of mobile places, exploring mobile place-making through an analysis of the practice of weekend group leisure cycling. These rides represent a mobility practice where the main aim of participants may be ‘leisure’ but most infrastructure used is designated for ‘transport’. Using ethnographic methods, the article provides an analysis of rhythm, positioning and communication on two group rides, one from Hull into the East Yorkshire countryside and one in London. External (including motor traffic flow and route type) and internal (including group composition and experience) factors shape the relationship between the riders and their ride, and hence the mobile places that they co-create. The article argues that cyclists riding in groups create distinctively flexible social spaces. These group cycling practices variously challenge, mimic and adapt to the motorized orientation of much road space.},
 	pages = {523--539},
 	number = {3},
 	journaltitle = {Sociology},
 	shortjournal = {Sociology},
 	author = {Aldred, Rachel and Jungnickel, Katrina},
-	urldate = {2015-03-07},
 	date = {2012-06-01},
 	langid = {english},
 	keywords = {Cycling, ethnography, leisure, mobilities, rhythm, transport},
-	file = {Full Text PDF:/home/tim/.zotero/zotero/0vj92h4e.default/zotero/storage/MK88BBT6/Aldred and Jungnickel - 2012 - Constructing Mobile Places between ‘Leisure’ and ‘.pdf:application/pdf;Snapshot:/home/tim/.zotero/zotero/0vj92h4e.default/zotero/storage/856TH6VB/523.html:text/html}
 }
 
 @inproceedings{reddy_biketastic:_2010,
 	location = {New York, {NY}, {USA}},
 	title = {Biketastic: Sensing and Mapping for Better Biking},
 	isbn = {978-1-60558-929-9},
-	url = {http://doi.acm.org/10.1145/1753326.1753598},
-	doi = {10.1145/1753326.1753598},
 	series = {{CHI} '10},
 	shorttitle = {Biketastic},
-	abstract = {Bicycling is an affordable, environmentally friendly alternative transportation mode to motorized travel. A common task performed by bikers is to find good routes in an area, where the quality of a route is based on safety, efficiency, and enjoyment. Finding routes involves trial and error as well as exchanging information between members of a bike community. Biketastic is a platform that enriches this experimentation and route sharing process making it both easier and more effective. Using a mobile phone application and online map visualization, bikers are able to document and share routes, ride statistics, sensed information to infer route roughness and noisiness, and media that documents ride experience. Biketastic was designed to ensure the link between information gathering, visualization, and bicycling practices. In this paper, we present architecture and algorithms for route data inferences and visualization. We evaluate the system based on feedback from bicyclists provided during a two-week pilot.},
 	pages = {1817--1820},
 	booktitle = {Proceedings of the {SIGCHI} Conference on Human Factors in Computing Systems},
 	publisher = {{ACM}},
 	author = {Reddy, Sasank and Shilton, Katie and Denisov, Gleb and Cenizal, Christian and Estrin, Deborah and Srivastava, Mani},
-	urldate = {2015-03-04},
 	date = {2010},
 	keywords = {location based services, map visualization, mobile sensing systems, participatory sensing},
 	file = {ACM Full Text PDF:/home/tim/.zotero/zotero/0vj92h4e.default/zotero/storage/GE9FBRBQ/Reddy et al. - 2010 - Biketastic Sensing and Mapping for Better Biking.pdf:application/pdf}
@@ -195,14 +161,12 @@
 	title = {Vélomobile Formations-in-Action Biking and Talking Together},
 	volume = {17},
 	issn = {1206-3312, 1552-8308},
-	url = {http://sac.sagepub.com.proxy.mah.se/content/17/2/137},
 	doi = {10.1177/1206331213508494},
 	pages = {137--156},
 	number = {2},
 	journaltitle = {Space and Culture},
 	shortjournal = {Space and Culture},
 	author = {{McIlvenny}, Paul},
-	urldate = {2015-03-04},
 	date = {2014-05-01},
 	langid = {english},
 	keywords = {bicycling, mobile formation, mobility, social interaction, talk, video},
@@ -249,7 +213,6 @@
 	url = {http://www.sciencedirect.com/science/article/pii/S0968090X14000734},
 	doi = {10.1016/j.trc.2014.03.007},
 	series = {Special Issue: Emerging Technologies Special Issue of {ICTIS} 2013 – Guest Editors: Liping Fu and Ming Zhong and Special Issue: Visualization \& Visual Analytics in Transportation – Guest Editors: Patricia S. Hu and Michael L. Pack},
-	abstract = {The group-cycling behaviours of over 16,000 members of the London Cycle Hire Scheme ({LCHS}), a large public bikeshare system, are identified and analysed. Group journeys are defined as trips made by two or more cyclists together in space and time. Detailed insights into group-cycling behaviour are generated using specifically designed visualization software. We find that in many respects group-cycle journeys fit an expected pattern of discretionary activity: group journeys are more likely at weekends, late evenings and lunchtimes; they generally take place within more pleasant parts of the city; and between individuals apparently known to each other. A separate set of group activity is found, however, that coincides with commuting peaks and that appears to be imposed onto {LCHS} users by the scheme’s design. Studying the characteristics of individuals making group journeys, we identify a group of less experienced {LCHS} cyclists that appear to make more spatially extensive journeys than they would do normally while cycling with others; and that female cyclists are more likely to make late evening journeys when cycling in groups. For 20\% of group cyclists, the first journey ever made through the {LCHS} was a group journey; this is particularly surprising since just 9\% of all group cyclists’ journeys are group journeys. Moreover, we find that women are very significantly (p \&lt; 0.001) overrepresented amongst these ‘first time group cyclists’. Studying the bikeshare cyclists, or bike share ‘friends’, that individuals make ‘first time group journeys’ with, we find a significantly high incidence (p \&lt; 0.001) of group journeys being made with friends of the opposite gender, and for a very large proportion (55\%) of members these first ever journeys are made with a friend that shares the same postcode. A substantial insight, then, is that group cycling appears to be a means through which early {LCHS} usage is initiated.},
 	pages = {194--206},
 	journaltitle = {Transportation Research Part C: Emerging Technologies},
 	shortjournal = {Transportation Research Part C: Emerging Technologies},
@@ -266,7 +229,6 @@
 	issn = {1477-8947},
 	url = {http://onlinelibrary.wiley.com/doi/10.1111/j.1477-8947.2011.01345.x/abstract},
 	doi = {10.1111/j.1477-8947.2011.01345.x},
-	abstract = {The reduction of {CO}2 emissions constitutes one of the largest challenges of the current era. Sustainable transportation, and especially cycling, can contribute to the mitigation of {CO}2 emissions since cycling possesses an intrinsic zero-emission value. Few studies have been conducted that appraise the {CO}2 reduction potential of cycling. Opportunity costs enable the estimation of avoided {CO}2 emissions resulting from bicycle trips. The methodology developed in this research allows the attribution of a climate value to cycling by substituting bicycle trips with their most likely alternative transportation modes and calculating the resulting additional {CO}2 emissions. The methodology uses data on the current modal shares of cycling mobility, the competition of cycling with other transportation modes, and {CO}2 emission factors to calculate the climate value of cycling. When it is assumed that the avoided {CO}2 emissions of cycling mobility could be traded on financial carbon markets, the climate value of cycling represents a monetary value. Application of the methodology to the case of Bogotá, Colombia — a city with a current bicycle modal share of 3.3\% on a total of 10 million daily trips — results in a climate value of cycling of 55,115 tons of {CO}2 per year, corresponding to an economic value of between 1 and 7 million {US} dollars when traded on the carbon market.},
 	pages = {100--111},
 	number = {2},
 	journaltitle = {Natural Resources Forum},
@@ -348,7 +310,6 @@
 	urldate = {2015-03-04},
 	date = {1998-06},
 	keywords = {Housing And Urban Planning, Transportation--Roads And Traffic},
-	file = {Full Text PDF:/home/tim/.zotero/zotero/0vj92h4e.default/zotero/storage/CZQ63UVG/Forbes - 1998 - The Hamilton-Wentworth community cycling survey.pdf:application/pdf;Snapshot:/home/tim/.zotero/zotero/0vj92h4e.default/zotero/storage/HBMN8EDQ/224874614.html:text/html}
 }
 
 @article{hoffman_urban_2014,
@@ -357,7 +318,6 @@
 	issn = {0042-0980, 1360-063X},
 	url = {http://usj.sagepub.com.proxy.mah.se/content/51/2/300},
 	doi = {10.1177/0042098013489741},
-	abstract = {Promoting physical activity among youth is an important public health objective. Initiatives in urban settings targeting different types of physical activity like cycling are important. This study sought to examine qualitatively urban youths’ experiences in and perceptions of a community cycling initiative (Earn-A-Bike) delivered in Philadelphia, {PA}, by a local non-profit, Neighborhood Bike Works ({NBW}). Focus groups were conducted to understand the impact of this programme and to inform future community-based initiatives targeting urban youth. Five themes were derived from the qualitative analysis, comprising benefits of cycling, barriers to cycling, cycling knowledge, support from family and friends, and self efficacy. Earn-A-Bike was well accepted by urban youth, who reported positive perceptions and intentions to continue cycling after the conclusion of the programme. {NBW} is an example of how local non-profits can integrate into urban communities, creating a positive impact on urban children’s lives from a health, cultural and educational perspective.},
 	pages = {300--318},
 	number = {2},
 	journaltitle = {Urban Studies},
@@ -455,3 +415,16 @@
 	date = {1999},
 	file = {Design Principles and Threats to Sustainable Organizations That Manage Commons.pdf:/home/tim/.zotero/zotero/0vj92h4e.default/zotero/storage/2PMZK8R9/Design Principles and Threats to Sustainable Organizations That Manage Commons.pdf:application/pdf}
 }
+
+@incollection{jensen,
+  title={Erving Goffman and Everyday Life Mobility},
+  author={Jensen, Ole B},
+  booktitle={The Contemporary Goffman},
+  editor={Jacobsen, Michael H},
+  volume={68},
+  pages={333--351},
+  year={2010},
+  location={Abingdon, England},
+  publisher={Routledge}
+}
+
